updates and typo corrections
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@316580 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/oop5.xml
+++ b/language/oop5.xml
@@ -1,29 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: c8a12f2b59f6f64d7c8bd40904afcc97a7d908c7 Maintainer: jorgeolaya Status: ready --> 
+<!-- EN-Revision: c8a12f2b59f6f64d7c8bd40904afcc97a7d908c7 Maintainer: jorgeolaya Status: ready -->
+
 <chapter xml:id="language.oop5" xmlns="http://docbook.org/ns/docbook">
  <title>Clases y Objetos</title>
  <sect1  xml:id="oop5.intro">
   <title>Introducción</title>
   <para>
-   A partir de PHP 5, el modelo de objetos ha sido reescrito para permitir un mejor
-   rendimiento  y más características. Este fue un cambio importante desde PHP 4. PHP 5 
-   tiene un modelo de objetos completo. 
+   A partir de PHP 5, el modelo de objetos ha sido reescrito para permitir un mejor 
+   rendimiento  y más características. Este fue un cambio importante a partir de PHP 4. 
+   PHP 5 tiene un modelo de objetos completo.
    </para>
    <para>
-   Entre las funciones de PHP 5 son las inclusiones de    
-   <link linkend="language.oop5.visibility">visibilidad</link>, 
-   <link linkend="language.oop5.abstract">resumen</link> y
-   <link linkend="language.oop5.final">ultimas</link> clases y métodos
-   adicionales <link linkend="language.oop5.magic">métodos mágicos</link>, 
+    Entre las características de PHP 5 están la inclusión de la 
+    <link linkend="language.oop5.visibility">visibilidad</link>, 
+    las clases <link linkend="language.oop5.abstract">abstractas</link> 
+    y clases y métodos <link linkend="language.oop5.final">finales</link>, 
+    <link linkend="language.oop5.magic">métodos mágicos</link> adicionales, 
    <link linkend="language.oop5.interfaces">interfaces</link>, 
    <link linkend="language.oop5.cloning">clonación</link> y
-   <link linkend="language.oop5.typehinting">tipo insinuando</link>. 
+   <link linkend="language.oop5.typehinting">tipos sugeridos</link>. 
    </para>
    <para>
-   PHP trata los objetos de la misma manera como referencias o la manipulación, lo que significa que 
+   PHP trata los objetos de la misma manera como referencias o manejadores, lo que significa que 
    cada variable contiene una referencia de objeto en lugar de una copia de todo el objeto. Ver 
-   <link linkend="language.oop5.references">objetos y referencias </link> 
+   <link linkend="language.oop5.references">objetos y referencias</link> 
    </para>
   &tip.userlandnaming;
  </sect1>
