--- a/language/oop5/basic.xml
+++ b/language/oop5/basic.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
 <!-- EN-Revision: 79ba70edc6e100b739ab272ffedacdc324fb9b79 Maintainer: jpberdejo Status: ready -->
-<!-- Reviewed: no -->
+<!-- Reviewed: no --> 
 
  <sect1 xml:id="language.oop5.basic" xmlns="http://docbook.org/ns/docbook">
   <title>Lo básico</title>
@@ -120,10 +120,9 @@ $this no está definida.
     esto es un requerimiento).
    </para>
    <para>
-    Si una <type>string</type> que contiene el nombre de una clase se usa con
+    Si un <type>string</type> que contiene el nombre de una clase se usa con
     <literal>new</literal>, una nueva instancia de esa clase será creada. Si
-    la clase está en un espacio de nombres, su nombre completamente cualificado se debe usar cuando
-    se hace esto.
+    la clase está en un espacio de nombres, su nombre completo debe ser usado cuando se hace esto.
    </para>
    <example>
     <title>Creación de una instancia</title>
