--- a/language/oop5/magic.xml
+++ b/language/oop5/magic.xml
@@ -1,69 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 03977edc1f92ef56b1141f05388cf400e3f09fcd Maintainer: chuso Status: ready -->
+<!-- EN-Revision: 4f3e16d7854ee82114b8d849731fbd7de57cc627 Maintainer: andresdzphp Status: ready -->
+
  <sect1 xml:id="language.oop5.magic" xmlns="http://docbook.org/ns/docbook">
-  <title>Métodos Magicos</title>
+  <title>Métodos mágicos</title> 
   <para>
-   Las siguientes funciones de clases en PHP son mágicas:
-   <link linkend="language.oop5.decon.constructor"><literal>__construct</literal></link>,
-   <link linkend="language.oop5.decon.destructor"><literal>__destruct</literal></link>,
-   <link linkend="language.oop5.overloading.methods"><literal>__call</literal></link>,
-   <link linkend="language.oop5.overloading.methods"><literal>__callStatic</literal></link>,
-   <link linkend="language.oop5.overloading.members"><literal>__get</literal></link>,
-   <link linkend="language.oop5.overloading.members"><literal>__set</literal></link>,
-   <link linkend="language.oop5.overloading.members"><literal>__isset</literal></link>,
-   <link linkend="language.oop5.overloading.members"><literal>__unset</literal></link>,
-   <link linkend="language.oop5.magic.sleep"><literal>__sleep</literal></link>,
-   <link linkend="language.oop5.magic.sleep"><literal>__wakeup</literal></link>,
-   <link linkend="language.oop5.magic.tostring"><literal>__toString</literal></link>,
-   <link linkend="language.oop5.magic.invoke"><literal>__invoke</literal></link>,
-   <link linkend="language.oop5.magic.set-state"><literal>__set_state</literal></link> y
-   <link linkend="language.oop5.cloning"><literal>__clone</literal></link>.
-   No se pueden definir estas funciones en ninguna clase, salvo que se
-   desee utilizar la funcionalidad asociada a ellas. 
+   Los nombres de método 
+   <link linkend="language.oop5.decon.constructor">__construct()</link>,
+   <link linkend="language.oop5.decon.destructor">__destruct()</link>,
+   <link linkend="language.oop5.overloading.methods">__call()</link>,
+   <link linkend="language.oop5.overloading.methods">__callStatic()</link>,
+   <link linkend="language.oop5.overloading.members">__get()</link>,
+   <link linkend="language.oop5.overloading.members">__set()</link>,
+   <link linkend="language.oop5.overloading.members">__isset()</link>,
+   <link linkend="language.oop5.overloading.members">__unset()</link>,
+   <link linkend="language.oop5.magic.sleep">__sleep()</link>,
+   <link linkend="language.oop5.magic.sleep">__wakeup()</link>,
+   <link linkend="language.oop5.magic.tostring">__toString()</link>,
+   <link linkend="language.oop5.magic.invoke">__invoke()</link>,
+   <link linkend="language.oop5.magic.set-state">__set_state()</link> y 
+   <link linkend="language.oop5.cloning">__clone()</link> 
+   son mágicos en las clases PHP. No se puede tener métodos con estos 
+   nombres en cualquiera de las clases a menos que desee la funcionalidad 
+   mágica asociada a estos.
   </para>
 
   <caution>
    <simpara>
-    PHP reserva todos los nombres de función que comienzan con __ como mágicas.
-    Se recomienda no utilizar nombres de funciones que comiencen con __, salvo
-    que se desee algunas de las funcionalidades mágicas documentadas
+    PHP se reserva todos los nombres de los métodos que comienzan con __ como mágicos.
+    Se recomienda que no utilice los nombres de métodos con __ en PHP a menos que desee 
+    alguna funcionalidad mágica documentada.
    </simpara>
   </caution>
  
   <sect2 xml:id="language.oop5.magic.sleep">
-   <title><literal>__sleep</literal> y <literal>__wakeup</literal></title>
+   <title>
+    <link linkend="language.oop5.magic.sleep">__sleep()</link> y
+    <link linkend="language.oop5.magic.sleep">__wakeup()</link>
+   </title>
    <para>
-    la función <function>serialize</function> comprueba si la clase tiene una función
-    con el nombre mágico <literal>__sleep</literal>. En tal caso, se ejecuta esta 
-    función antes de llevar a cabo la serialización. Puede limpiar un objeto, y se
-    espera que devuelva un array que contenga los nombres de las variables del objeto
-    que se deben serializar. Si el método no devuelve nada, entonces se serializa
-    &null; y se emite <constant>E_NOTICE</constant>.
+    <function>serialize</function> comprueba si la clase tiene un método con 
+    el nombre mágico <link linkend="language.oop5.magic.sleep">__sleep()</link>. Si es así, 
+    el método se ejecuta antes de cualquier serialización. Se puede limpiar el objeto y se supone 
+    que devuelve un array con los nombres de todas las variables de el objeto que se va a serializar.
+    Si el método no devuelve nada, entonces &null; es serializado y un error <constant>E_NOTICE</constant> es emitido.
    </para>
    <note>
     <para>
-     Para <literal>__sleep</literal> no es posible devolver nombres de propiedades
-     privadas en las clases padre. Esto resultaría un nivel de error
-     <constant>E_NOTICE</constant>. En su lugar, se debe utilizar la interfaz
-     <classname>Serializable</classname>.
+     No es posible para <link linkend="language.oop5.magic.sleep">__sleep()</link> devolver 
+     nombres de propiedades privadas en las clases padres. Hacer esto resultaría un nivel de error
+     <constant>E_NOTICE</constant>. En su lugar, puede utilizar la interfaz <classname>Serializable</classname>.
     </para>
    </note>
    <para>
-    El uso para el que está destinado <literal>__sleep</literal> consiste en
-    finalizar procesos o llevar a cabo tareas similares. Además, la función también
-    es útil si se tiene un gran número de objetos que no se necesitan almacenar
-    por completo.
+    El uso para el que está destinado <link linkend="language.oop5.magic.sleep">__sleep</link> consiste 
+    en confirmar datos pendientes o realizar tareas similares de limpieza. Además, el método es útil si 
+    tiene objetos muy grandes que no necesitan guardarse por completo.
    </para>
    <para>
-    Por otra parte, <function>unserialize</function> comprueba si existe una función
-    con el nomre mágico <literal>__wakeup</literal>. Si estuviera presente, esta función
-    podría reconstruir cualquier recurso que tuviera el objeto.
+    Por el contrario, <function>unserialize</function> comprueba la presencia de un método con el nombre mágico  
+    <link linkend="language.oop5.magic.sleep">__wakeup()</link>. Si está presente, este método puede reconstruir 
+    cualquier recurso que el objeto pueda tener.
    </para>
    <para>
-    El uso para el que <literal>__wakeup</literal> está destinado, es reestablecer
-    cualquier conexión con base de datos que se haya perdido durante la serialización,
-    y para llevar a cabo otras reinicializaciones.
+    El uso para el que está destinado <link linkend="language.oop5.magic.sleep">__wakeup()</link> es restablecer 
+    las conexiones de base de datos que se puedan haber perdido durante la serialización y realizar otras tareas 
+    de reinicialización.
    </para>
    <example>
     <title>Sleep y wakeup</title>
@@ -107,20 +109,19 @@ class Connection
   </sect2>
 
   <sect2 xml:id="language.oop5.magic.tostring">
-   <title><literal>__toString</literal></title>
+   <title><link linkend="language.oop5.magic.tostring">__toString()</link></title>
    <para>
-    El método <literal>__toString</literal> le permite a una clase decidir cómo
-    comportarse cuando se le trate como a un string. Por ejemplo,
-    lo que <literal>echo $obj;</literal> mostraría. Este método debe devolver un
-    string, dado que si no, se emitirá un nivel de error fatal
-    <constant>E_RECOVERABLE_ERROR</constant>.
+    El método <link linkend="language.oop5.magic.tostring">__toString()</link> permite a una clase 
+    decidir cómo comportarse cuando se le trata como una string. Por ejemplo,
+    lo que <literal>echo $obj;</literal> mostraría. Este método debe 
+    devolver un string, si no se emitirá un nivel de error fatal <constant>E_RECOVERABLE_ERROR</constant>.
    </para>
    <example>
-    <title>Ejemplo básico</title>
+    <title>Ejemplo simple</title>
     <programlisting role="php">
 <![CDATA[
 <?php
-// Declaramos una clase básica
+// Declarar una clase simple
 class TestClass
 {
     public $foo;
@@ -136,7 +137,7 @@ class TestClass
     }
 }
 
-$class = new TestClass('Hola');
+$class = new TestClass('Hola Mundo');
 echo $class;
 ?>
 ]]>
@@ -144,35 +145,36 @@ echo $class;
     &example.outputs;
     <screen>
 <![CDATA[
-Hola
+Hola Mundo
 ]]>
     </screen>
    </example>
    <para>
-    Antes de PHP 5.2.0, sólo se invocaba al método <literal>__toString</literal>
-    cuando se combinaba directamente con <function>echo</function> o con
-    <function>print</function>. Desde PHP 5.2.0, se le llama en todos los
-    contextos de strings (p.ej. en <function>printf</function> con el modificador
-    <literal>%s</literal>) pero no en contextos de otro tipo (p.ej. con
-    el modificador <literal>%d</literal>). Desde PHP 5.2.0,
-    convertir objetos a string sin el método <literal>__toString</literal>
-    emitirá un <constant>E_RECOVERABLE_ERROR</constant>.
+    Antes de PHP 5.2.0 el método 
+    <link linkend="language.oop5.magic.tostring">__toString()</link> 
+    se llama sólo cuando se combina directamente con
+    <function>echo</function> o <function>print</function>.
+    Desde PHP 5.2.0, se le llama en cualquier contexto de string (e.j. en
+    <function>printf</function> con  el modificador <literal>%s</literal>) pero no 
+    en el contexto de otros tipos (e.j. con el modificador <literal>%d</literal>).
+    Desde PHP 5.2.0, la conversión de los objetos sin el método <link linkend="language.oop5.magic.tostring">__toString()</link> 
+    a string podría causar <constant>E_RECOVERABLE_ERROR</constant>.
    </para>
   </sect2>
 
   <sect2 xml:id="language.oop5.magic.invoke">
-   <title><literal>__invoke</literal></title>
+   <title><link linkend="language.oop5.magic.invoke">__invoke()</link></title>
    <para>
-    Al método <literal>__invoke</literal> se le llama cuando un script trata
-    de llamar a un objeto como si fuera una función.
+    El método <link linkend="language.oop5.magic.invoke">__invoke()</link> es llamado cuando 
+    un script intenta llamar a un objeto como si fuera una función.
    </para>
    <note>
     <para>
-     Esta funcionalidad está disponible desde PHP 5.3.0.
+     Esta característica está disponible desde PHP 5.3.0.
     </para>
    </note>
    <example>
-    <title>Uso de <literal>__invoke</literal></title>
+    <title>Uso de <link linkend="language.oop5.magic.invoke">__invoke()</link></title>
     <programlisting role="php">
 <![CDATA[
 <?php
@@ -200,17 +202,17 @@ bool(true)
   </sect2>
 
   <sect2 xml:id="language.oop5.magic.set-state">
-   <title><literal>__set_state</literal></title>
+   <title><link linkend="language.oop5.magic.set-state">__set_state()</link></title>
    <para>
-    A este método <link linkend="language.oop5.static">static</link> se le llama
-    para las clases exportadas por <function>var_export</function>, desde PHP 5.1.0.
+    Este método <link linkend="language.oop5.static">static</link> es llamado para 
+    las clases exportadas por <function>var_export</function>, desde PHP 5.1.0.
    </para>
    <para>
-    El único parámetro de este método es un array que contenga las propiedades exportadas
-    en la forma <literal>array('propiedad' => valor, ...)</literal>.
+    El único parámetro de este método es un array que contiene las propiedades exportadas 
+    en la forma <literal>array('property' => value, ...)</literal>.
    </para>
    <example>
-    <title>Uso de <literal>__set_state</literal> (desde PHP 5.1.0)</title>
+    <title>Uso de <link linkend="language.oop5.magic.set-state">__set_state()</link> (desde PHP 5.1.0)</title>
     <programlisting role="php">
 <![CDATA[
 <?php
@@ -220,7 +222,7 @@ class A
     public $var1;
     public $var2;
 
-    public static function __set_state($an_array) // Desde PHP 5.1.0
+    public static function __set_state($an_array) // As of PHP 5.1.0
     {
         $obj = new A;
         $obj->var1 = $an_array['var1'];
@@ -277,3 +279,4 @@ vim600: syn=xml fen fdm=syntax fdl=2 si
 vim: et tw=78 syn=sgml
 vi: ts=1 sw=1
 -->
+
