--- a/language/oop5/patterns.xml
+++ b/language/oop5/patterns.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- $Revision$ -->
+<!-- $Revision$ --> 
 <!-- EN-Revision: f6580b6a63f1a578a14de64ac6e4a34f56b7e9ec Maintainer: chuso Status: ready -->
 <sect1 xml:id="language.oop5.patterns" xmlns="http://docbook.org/ns/docbook">
  <title>Patrones</title>
@@ -38,8 +38,8 @@ class Ejemplo
 ]]>
    </programlisting>
    <para>
-    Al definir este método en una clase, permitimos que se puedan cargar
-    al vuelo los drivers. Si la case <literal>Ejemplo</literal> fuera una
+    La definición de este método en una clase, permite que los drivers se puedan 
+    cargar sobre la marcha. Si la clase <literal>Ejemplo</literal> fuera una
     clase de abstracción de bases de datos, se podría cargar un driver de
     <literal>MySQL</literal> y de <literal>SQLite</literal> de la siguiente forma:
    </para>
@@ -60,7 +60,7 @@ $sqlite = Ejemplo::fabrica('SQLite');
  <sect2 xml:id="language.oop5.patterns.singleton">
   <title>Singleton</title>
   <para>
-   Un Singleton asegura que sólo existe una instancia de una determinada Clase y ofrece
+   Un Singleton asegura que sólo exista una instancia de una determinada clase y ofrece
    un punto de acceso global a esa instancia. El singleton es un Patrón Creacional del "Gang of Four" (La Banda de los Cuatro).
   </para>
   <para>A menudo se utiliza el patrón singleton para implementar clases de bases de datos, registros, controladores
@@ -111,16 +111,16 @@ class Ejemplo
    <para>A continuación se ilustra cómo se comporta el Singleton</para>
    <programlisting role="php"><![CDATA[
 <?php
-$singleton = Example::singleton(); // imprime "Creando nueva instancia."
-echo $singleton->increment(); // 0
-echo $singleton->increment(); // 1
+$singleton = Ejemplo::singleton(); // imprime "Creando nueva instancia."
+echo $singleton->incremento(); // 0
+echo $singleton->incremento(); // 1
 
-$singleton = Example::singleton(); // reutiliza la instancia ya existente
-echo $singleton->increment(); // 2
-echo $singleton->increment(); // 3
+$singleton = Ejemplo::singleton(); // reutiliza la instancia ya existente
+echo $singleton->incremento(); // 2
+echo $singleton->incremento(); // 3
 
 // todos estos emitirán un Error Fatal
-$singleton2 = new Example;
+$singleton2 = new Ejemplo;
 $singleton3 = clone $singleton;
 $singleton4 = unserialize(serialize($singleton));
 ?>
