--- a/language/oop5/properties.xml
+++ b/language/oop5/properties.xml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
 <!-- EN-Revision: 96c9d88bad9a7d7d44bfb7f26c226df7ee9ddf26 Maintainer: x1v4nx Status: ready -->
-<!-- Reviewed: no -->
+<!-- Reviewed: no --> 
 
  <sect1 xml:id="language.oop5.properties" xmlns="http://docbook.org/ns/docbook">
   <title>Propiedades</title>
 
   <para>
    Las variables pertenecientes a clases son llamadas "propiedades".
-   También se las puede referir usando otros términos como "atributos"
-   o "campos", pero a los efectos de esta alusión se utilizará
+   También se les puede referir usando otros términos como "atributos"
+   o "campos", pero para los propósitos de esta referencia vamos a utilizar 
    "propiedades". Éstas se definen usando una de las palabras claves
    <literal>public</literal>, <literal>protected</literal>,
    o <literal>private</literal>, seguido por una declaración normal
    de variable. Esta declaración puede incluir una inicialización,
-   pero ésta debe ser constante--esto es, debe tener la capacidad
-   de ser evaluada en compilación y no debe depender de información
+   pero esta inicialización debe ser un valor constante, es decir, debe tener la capacidad 
+   de ser evaluada en la compilación y no debe depender de información
    en tiempo de ejecución para ser evaluada.
   </para>
   <para>
