updates and typo corrections
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@316659 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/control-structures/switch.xml
+++ b/language/control-structures/switch.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: c7aca484fd1d7eaccd03f0e011f858fa93d105b9 Maintainer: jpberdejo Status: ready -->
+<!-- EN-Revision: 88a88985b966ce3acdc7835984636921e862e4c2 Maintainer: jpberdejo Status: ready -->
 
 <sect1 xml:id="control-structures.switch" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink">
  <title><literal>switch</literal></title>
@@ -210,7 +210,7 @@ endswitch;
   </informalexample>
  </para>
  <para>
-  Es posible utilizar un punto y coma en lugar de dos puntos después de caso así:
+  Es posible utilizar un punto y coma en lugar de dos puntos después de un caso como:
   <informalexample>
    <programlisting role="php">
 <![CDATA[
