--- a/language/variables.xml
+++ b/language/variables.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: ead656df661625bb6a73b24f92bd204316e5c564 Maintainer: yago Status: ready -->
+<!-- EN-Revision: 4d88a5d9b617de4b42cfd225a28eee158048fe0f Maintainer: andresdzphp Status: ready -->
 
  <chapter xml:id="language.variables" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink">
  <title>Variables</title>
@@ -760,7 +760,7 @@ echo "$a $hola";
 
    <para>
     <example>
-     <title>Ejemplo de función variable</title>
+     <title>Ejemplo de la propiedad variable</title>
       <programlisting role="php">
 <![CDATA[
 <?php
