updated to the most recent version.
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@316838 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/constants.xml
+++ b/language/constants.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 96c9d88bad9a7d7d44bfb7f26c226df7ee9ddf26 Maintainer: yago Status: ready -->
+<!-- EN-Revision: 563ae44518ca9b3891ad9b4123cad249f1598ab3 Maintainer: andresdzphp Status: ready -->
+
  <chapter xml:id="language.constants" xmlns="http://docbook.org/ns/docbook">
   <title>Constantes</title>
 
@@ -248,7 +249,8 @@ echo CONSTANT;
         <entry>
          Nombre de la clase. (Añadida en PHP 4.3.0) Desde PHP 5 esta constante
          devuelve el nombre de la clase donde fue declarada (sensible a mayúsculas).
-         En PHP 4 su valor siempre es en minúsculas.
+         En PHP 4 su valor siempre es en minúsculas. El nombre de la clase incluye 
+         el namespace declarado en (p.e.j. <literal>Foo\Bar</literal>).
         </entry>
        </row>
        <row>
