--- a/language/predefined/errorexception/construct.xml
+++ b/language/predefined/errorexception/construct.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: af4410a7e15898c3dbe83d6ea38246745ed9c6fb Maintainer: yago Status: ready -->
+<!-- EN-Revision: 31655 Maintainer: andresdzphp Status: ready -->
+
 <refentry xml:id="errorexception.construct" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink">
  <refnamediv>
   <refname>ErrorException::__construct</refname>
@@ -11,14 +12,15 @@
   &reftitle.description;
   <constructorsynopsis>
    <modifier>public</modifier> <methodname>ErrorException::__construct</methodname>
-   <methodparam choice="opt"><type>string</type><parameter>message</parameter></methodparam>
-   <methodparam choice="opt"><type>int</type><parameter>code</parameter></methodparam>
-   <methodparam choice="opt"><type>int</type><parameter>severity</parameter></methodparam>
-   <methodparam choice="opt"><type>string</type><parameter>filename</parameter></methodparam>
-   <methodparam choice="opt"><type>int</type><parameter>lineno</parameter></methodparam>
+   <methodparam choice="opt"><type>string</type><parameter>message</parameter><initializer>""</initializer></methodparam>
+   <methodparam choice="opt"><type>int</type><parameter>code</parameter><initializer>0</initializer></methodparam>
+   <methodparam choice="opt"><type>int</type><parameter>severity</parameter><initializer>1</initializer></methodparam>
+   <methodparam choice="opt"><type>string</type><parameter>filename</parameter><initializer>__FILE__</initializer></methodparam>
+   <methodparam choice="opt"><type>int</type><parameter>lineno</parameter><initializer>__LINE__</initializer></methodparam>
+   <methodparam choice="opt"><type>Exception</type><parameter>previous</parameter><initializer>&null;</initializer></methodparam>
   </constructorsynopsis>
   <para>
-   Construye la Excepción
+   Construye la Excepción.
   </para>
  </refsect1>
  
@@ -63,6 +65,14 @@
      <listitem>
       <para>
        Número de la línea donde se produjo la excepción.
+      </para>
+     </listitem>
+    </varlistentry>
+    <varlistentry>
+     <term><parameter>previous</parameter></term>
+     <listitem>
+      <para>
+       La anterior excepción utilizada para la excepción de encadenamiento.
       </para>
      </listitem>
     </varlistentry>
