updated to the most recent version.
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@317028 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/oop5/autoload.xml
+++ b/language/oop5/autoload.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: a2048ed42fe3df85010149ae85e9e01e574f274d Maintainer: x1v4nx Status: ready -->
+<!-- EN-Revision: 7137ccc0fdbf158b97872772dd6a989f32f50365 Maintainer: andresdzphp Status: ready -->
+<!-- Reviewed: no -->
+
  <sect1 xml:id="language.oop5.autoload" xmlns="http://docbook.org/ns/docbook">
   <title>Auto-carga de Clases</title>
   <para>
@@ -16,6 +18,14 @@
    Al invocar a esta función el motor de scripting está dando una última
    oportunidad de cargar la clase antes que PHP falle con un error.
   </para>
+    <tip>
+   <para>
+    <function>spl_autoload_register</function> proporciona una alternativa más 
+    flexible para la carga automática de clases. Por esta razón, el uso de 
+    <function>__autoload</function> no se recomienda y puede ser obsoleta o 
+    eliminada en el futuro.
+   </para>
+  </tip>
   <note>
    <para>
     Antes de 5.3.0, las excepciones lanzadas en la función __autoload no
