updated to the most recent version.
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@317035 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/oop5/changelog.xml
+++ b/language/oop5/changelog.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: d25dd45e3210120d3b71086f2aaf7f0ce7331356 Maintainer: chuso Status: ready -->
+<!-- EN-Revision: f0550025342228d4a7e6caa0edd2ec9d6ff63a00 Maintainer: andresdzphp Status: ready -->
+<!-- Reviewed: no -->
+
 <sect1 xml:id="language.oop5.changelog" xmlns="http://docbook.org/ns/docbook">
  <title>Registro de cambios de POO</title>
  <para>
@@ -18,6 +20,13 @@
      </row>
     </thead>
     <tbody>
+     <row>
+      <entry>5.4.0</entry>
+      <entry>
+       Cambiado: Si una clase <link linkend="language.oop5.abstract">abstract</link> 
+       define una signatura para el constructor ahora se hará cumplir.
+      </entry>
+     </row>
      <row>
       <entry>5.3.3</entry>
       <entry>
