updated to the most recent version.
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@317177 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/oop5/abstract.xml
+++ b/language/oop5/abstract.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 41e9ddf842be85cafcd6278af4da87c56c324139 Maintainer: yago Status: ready -->
+<!-- EN-Revision: f0550025342228d4a7e6caa0edd2ec9d6ff63a00 Maintainer: andresdzphp Status: ready -->
 <!-- Reviewed: no -->
+
 
  <sect1 xml:id="language.oop5.abstract" xmlns="http://docbook.org/ns/docbook">
   <title>Abstracción de clases</title>
@@ -21,7 +22,11 @@
    misma <link linkend="language.oop5.visibility">visibilidad</link> (o con
    una menos restrictiva). Por ejemplo, si el método abstracto está definido
    como protected, la implementación de la función puede ser redefinida como
-   protected o public, pero nunca como private.
+   protected o public, pero nunca como private. Por otra parte, las estructuras 
+   de los métodos tienen que coincidir, es decir, los (type hinting) tipos sugeridos 
+   y el número de argumentos requeridos deben ser los mismos. Esto también aplica a los 
+   constructores de PHP 5.4. Antes de PHP 5.4 las estructuras del constructor podían ser 
+   diferentes.
   </para>
 
   <example>
