--- a/language/oop5/decon.xml
+++ b/language/oop5/decon.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 8574a2c1bd1dee8283a9d05fc0bd21c36efd237b Maintainer: agarzon Status: ready -->
+<!-- EN-Revision: 4e687b6db50ab3c9310d694cb460b531e486fa6d Maintainer: agarzon Status: ready -->
+<!-- Reviewed: no -->
 
 <sect1 xml:id="language.oop5.decon" xmlns="http://docbook.org/ns/docbook">
  <title>Constructores y destructores</title>
@@ -94,10 +95,9 @@ class Bar {
    </methodsynopsis>
   <para>
    PHP 5 introduce un concepto de destructor similar al de otros
-   lenguajes orientados a objetos, tal como C++. El método destructor será
-   llamado tan pronto como todas las referencias a un objeto en particular
-   sean removidas, cuando es explícitamente destruido o en cualquier otra
-   circunstancia de finalización.
+   lenguajes orientados a objetos, tal como C++. El método destructor 
+   será llamado tan pronto como no hayan otras referencias a un objeto 
+   determinado, o en cualquier otra circunstancia de finalización.
   </para>
   <example>
    <title>Ejemplo de Destructor</title>
