--- a/language/predefined/traversable.xml
+++ b/language/predefined/traversable.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
 <!-- EN-Revision: af4410a7e15898c3dbe83d6ea38246745ed9c6fb Maintainer: gerardocdc Status: ready -->
+<!-- Reviewed: no -->
 
 <phpdoc:classref xml:id="class.traversable" xmlns:phpdoc="http://php.net/ns/phpdoc" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:xi="http://www.w3.org/2001/XInclude">
  
@@ -13,7 +14,7 @@
   <section xml:id="traversable.intro">
    &reftitle.intro;
    <para>
-    Interfaz para detectar si una clase es tranvesable mediante using &foreach;.
+    Interfaz para detectar si una clase es tranvesable mediante &foreach;.
    </para>
    <para>
     Una interfaz abstracta básica no puede ser implementada por su cuenta. Sin embargo debe
