updated to the most recent version and fixed typos.
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@317297 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/context/http.xml
+++ b/language/context/http.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
 <!-- EN-Revision: bf78e91509cac7e8a1ea04557c45e3d8aa919f47 Maintainer: chuso Status: ready -->
+<!-- Reviewed: no -->
 
 <refentry xml:id="context.http" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink" role="noversion">
  <refnamediv>
@@ -329,7 +330,7 @@ fclose($stream);
  <refsect1 role="notes">
   &reftitle.notes;
   <note>
-   <title>Opcioens de contexto del flujo de socket subyacente</title>
+   <title>Opciones de contexto del flujo de socket subyacente</title>
    <simpara>
     Hay soporte para opciones de contexto adicionales en el
     <link linkend="transports.inet">transporte subyacente</link>
@@ -345,7 +346,7 @@ fclose($stream);
     Cuando esta envultura sigue una redirección, el
     <literal>wrapper_data</literal> devuelto por
     <function>stream_get_meta_data</function> no contiene necesariamente
-    la línea de estadp HTTP que realmente se aplica al contenido del índice
+    la línea de estado HTTP que realmente se aplica al contenido del índice
     <literal>0</literal>.
    </simpara>
    <screen>
