--- a/language/context/socket.xml
+++ b/language/context/socket.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
 <!-- EN-Revision: 0cc3ec82158dbc3a74069483994f99dd640b9350 Maintainer: yago Status: ready -->
+<!-- Reviewed: no -->
 
 <refentry xml:id="context.socket" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink" role="noversion">
  <refnamediv>
   <refname>Opciones de contexto de sockets</refname>
-  <refpurpose>Listado do opciones de contexto de sockets</refpurpose>
+  <refpurpose>Listado de opciones de contexto de sockets</refpurpose>
  </refnamediv>
 
  <refsect1 role="description"><!-- {{{ -->
