--- a/language/oop5/traits.xml
+++ b/language/oop5/traits.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: c8a12f2b59f6f64d7c8bd40904afcc97a7d908c7 Maintainer: chuso Status: ready -->
+<!-- EN-Revision: da72824c454f84d125b6747b65828c45bfafd972 Maintainer: chuso Status: ready -->
  <sect1 xml:id="language.oop5.traits" xmlns="http://docbook.org/ns/docbook">
   <title>Traits</title>
   <para>
@@ -67,20 +67,20 @@ class ezcReflectionFunction extends ReflectionFunction {
 <![CDATA[
 <?php
 class Base {
-  public function decirHola() {
-    echo '¡Hola ';
-  }
+    public function decirHola() {
+        echo '¡Hola ';
+    }
 }
 
 trait DecirMundo {
-  public function decirHola() {
-    parent::decirHola();
-    echo 'Mundo!';
-  }
+    public function decirHola() {
+        parent::decirHola();
+        echo 'Mundo!';
+    }
 }
 
 class MiHolaMundo extends Base {
-  use DecirMundo;
+    use DecirMundo;
 }
 
 $o = new MiHolaMundo();
@@ -101,16 +101,16 @@ $o->decirHola();
 <![CDATA[
 <?php
 trait HolaMundo {
-  public function decirHola() {
-    echo '¡Hola Mundo!';
-  }
+    public function decirHola() {
+        echo '¡Hola Mundo!';
+    }
 }
 
 class ElMundoNoEsSuficiente {
-  use HolaMundo;
-  public function decirHola() {
-    echo '¡Hola Universo!';
-  }
+    use HolaMundo;
+    public function decirHola() {
+        echo '¡Hola Universo!';
+    }
 }
 
 $o = new ElMundoNoEsSuficiente();
@@ -139,22 +139,22 @@ $o->decirHola();
 <![CDATA[
 <?php
 trait Hola {
-  public function decirHola() {
-    echo 'Hola ';
-  }
+    public function decirHola() {
+        echo 'Hola ';
+    }
 }
 
 trait Mundo {
-  public function decirMundo() {
-    echo ' Mundo';
-  }
+    public function decirMundo() {
+        echo ' Mundo';
+    }
 }
 
 class MiHolaMundo {
-  use Hola, Mundo;
-  public function decirAdmiración() {
-    echo '!';
-  }
+    use Hola, Mundo;
+    public function decirAdmiración() {
+        echo '!';
+    }
 }
 
 $o = new MiHolaMundo();
@@ -206,36 +206,36 @@ Hola Mundo!
 <![CDATA[
 <?php
 trait A {
-  public function smallTalk() {
-    echo 'a';
-  }
-  public function bigTalk() {
-    echo 'A';
-  }
+    public function smallTalk() {
+        echo 'a';
+    }
+    public function bigTalk() {
+        echo 'A';
+    }
 }
 
 trait B {
-  public function smallTalk() {
-    echo 'b';
-  }
-  public function bigTalk() {
-    echo 'B';
-  }
+    public function smallTalk() {
+        echo 'b';
+    }
+    public function bigTalk() {
+        echo 'B';
+    }
 }
 
 class Talker {
-  use A, B {
-    B::smallTalk insteadof A;
-    A::bigTalk insteadof B;
-  }
+    use A, B {
+        B::smallTalk insteadof A;
+        A::bigTalk insteadof B;
+    }
 }
 
 class Aliased_Talker {
-  use A, B {
-    B::smallTalk insteadof A;
-    A::bigTalk insteadof B;
-    B::bigTalk as talk;
-  }
+    use A, B {
+        B::smallTalk insteadof A;
+        A::bigTalk insteadof B;
+        B::bigTalk as talk;
+    }
 }
 ?>
 ]]>
@@ -255,15 +255,18 @@ class Aliased_Talker {
 <![CDATA[
 <?php
 trait HolaMundo {
-  public function decirHola() {
-    echo 'Hola Mundo!';
-  }
+    public function decirHola() {
+        echo 'Hola Mundo!';
+    }
 }
 
+// Cambiamos visibilidad de decirHola
 class MiClase1 {
-  use HolaMundo { decirHola as protected }
+    use HolaMundo { decirHola as protected }
 }
 
+// Método alias con visibilidad cambiada
+// La visibilidad de decirHola no cambia
 class MiClase2 {
   use HolaMundo { hacerHolaMundo as private decirHola }
 }
@@ -286,23 +289,23 @@ class MiClase2 {
 <![CDATA[
 <?php
 trait Hola {
-  public function decirHola() {
-    echo 'Hola ';
-  }
+    public function decirHola() {
+        echo 'Hola ';
+    }
 }
 
 trait Mundo {
-  public function decirMundo() {
-    echo 'Mundo!';
-  }
+    public function decirMundo() {
+        echo 'Mundo!';
+    }
 }
 
 trait HolaMundo {
-  use Hola, Mundo;
+    use Hola, Mundo;
 }
 
 class MiHolaMundo {
-  use HolaMundo;
+    use HolaMundo;
 }
 
 $o = new MiHolaMundo();
@@ -332,21 +335,21 @@ Hola Mundo!
 <![CDATA[
 <?php
 trait Hola {
-  public function decirHolaMundo() {
-    echo 'Hola'.$this->obtenerMundo();
-  }
-  abstract public function obtenerMundo();
+    public function decirHolaMundo() {
+        echo 'Hola'.$this->obtenerMundo();
+    }
+    abstract public function obtenerMundo();
 }
 
 class MiHolaMundo {
-  private $mundo;
-  use Hola;
-  public function obtenerMundo() {
-    return $this->mundo;
-  }
-  public function asignarMundo($val) {
-    $this->mundo = $val;
-  }
+    private $mundo;
+    use Hola;
+    public function obtenerMundo() {
+        return $this->mundo;
+    }
+    public function asignarMundo($val) {
+        $this->mundo = $val;
+    }
 }
 ?>
 ]]>
@@ -366,24 +369,24 @@ class MiHolaMundo {
     <programlisting role="php">
 <![CDATA[
 <?php
-  trait Contador {
+trait Contador {
     public function inc() {
-      static $c = 0;
-      $c = $c + 1;
-      echo "$c\n";
+        static $c = 0;
+        $c = $c + 1;
+        echo "$c\n";
     }
-  }
+}
 
-  class C1 {
+class C1 {
     use Contador;
-  }
+}
 
-  class C2 {
+class C2 {
     use Contador;
-  }
+}
 
-  $o = new C1(); $o->inc(); // echo 1
-  $p = new C2(); $p->inc(); // echo 1
+$o = new C1(); $o->inc(); // echo 1
+$p = new C2(); $p->inc(); // echo 1
 ?>
 ]]>
     </programlisting>
@@ -393,15 +396,17 @@ class MiHolaMundo {
     <programlisting role="php">
 <![CDATA[
 <?php
-  trait Singleton {
-    public static function getInstance() { ... }
-  }
+trait EjemploEstatico {
+    public static function hacerAlgo() {
+        return 'Hacer algo';
+    }
+}
 
-  class MiSingleton extends SomeUnrelatedSuperClass {
-    use Singleton;
-  }
+class Ejemplo {
+    use EjemploEstatico;
+}
 
-  MiSingleton::getInstance();
+Ejemplo::hacerAlgo();
 ?>
 ]]>
     </programlisting>
