English version update
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@317611 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/operators.xml
+++ b/language/operators.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 8a153b8ae6b30de8b63aac959e6cef0cafa8e1e1 Maintainer: jpberdejo Status: ready -->
+<!-- EN-Revision: 3a6bfb99cee996cf7d104e989181c9157aed9781 Maintainer: jpberdejo Status: ready -->
  <chapter xml:id="language.operators" xmlns="http://docbook.org/ns/docbook">
   <title>Operadores</title>
   <simpara>
@@ -1489,6 +1489,12 @@ echo "<pre>$output</pre>";
     <para>
      El operador de comillas invertidas se deshabilita cuando &safemode; esta activado
      o <function>shell_exec</function> esta desactivado.
+    </para>
+   </note>
+   <note>
+    <para>
+     A diferencia de otros lenguajes, las comillas invertidas no pueden ser usadas dentro
+     de strings entre comillas dobles.
     </para>
    </note>
    <para>
