--- a/language/control-structures/else.xml
+++ b/language/control-structures/else.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
 <!-- EN-Revision: c7aca484fd1d7eaccd03f0e011f858fa93d105b9 Maintainer: jpberdejo Status: ready -->
+<!-- Reviewed: no -->
 
 <sect1 xml:id="control-structures.else" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink">
  <title><literal>else</literal></title>
  <?phpdoc print-version-for="else"?>
  <para>
-  Con frecuencia se desea ejecutar una sentencia si una cierta condición se 
+  Con frecuencia se desea ejecutar una sentencia si una determinada condición se 
   cumple y una sentencia diferente si la condición no se cumple. Esto
   es para lo que sirve <literal>else</literal>. El <literal>else</literal>
   extiende una sentencia <literal>if</literal> para ejecutar una sentencia
-  en caso que la expresión e la sentencia <literal>if</literal> se evalúa
+  en caso que la expresión en la sentencia <literal>if</literal> se evalúe
   como &false;. Por ejemplo, el siguiente código
   deberá mostrar <computeroutput>a es mayor que
   b</computeroutput> si <varname>$a</varname> es mayor que
