--- a/language/control-structures/return.xml
+++ b/language/control-structures/return.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
 <!-- EN-Revision: c7aca484fd1d7eaccd03f0e011f858fa93d105b9 Maintainer: jpberdejo Status: ready -->
+<!-- Reviewed: no -->
 
 <sect1 xml:id="function.return" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink">
  <title>return</title>
@@ -50,8 +51,8 @@
   </note>
   <note>
    <simpara>
-    <emphasis>Nunca</emphasis> se deben usara paréntesis al rededor de la variable
-    de retorno cuando retorna por referencia, ya que esto no funcionará. Sólo se pueden
+    <emphasis>Nunca</emphasis> se deben usar paréntesis al rededor de la variable
+    de retorno cuando se retorna por referencia, ya que esto no funcionará. Sólo se pueden
     retornar variables por referencia, no el resultado de una sentencia. Si se
     utiliza <literal>return ($a);</literal> entonces no se está retornando una
     variable, sino el resultado de la expresión <literal>($a)</literal>
