--- a/language/control-structures/alternative-syntax.xml
+++ b/language/control-structures/alternative-syntax.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
 <!-- EN-Revision: c7aca484fd1d7eaccd03f0e011f858fa93d105b9 Maintainer: jpberdejo Status: ready -->
+<!-- Reviewed: no -->
 
 <sect1 xml:id="control-structures.alternative-syntax"  xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink">
  <title>Sintaxis alternativa de estructuras de control</title>
@@ -9,7 +10,7 @@
   PHP ofrece una sintaxis alternativa para algunas de sus estructuras
   de control; a saber: <literal>if</literal>,
   <literal>while</literal>, <literal>for</literal>,
-  <literal>foreach</literal>, and <literal>switch</literal>.
+  <literal>foreach</literal>, y <literal>switch</literal>.
   En cada caso, la forma básica de la sintaxis alternativa es cambiar 
   el corchete de apertura por dos puntos (:) y el corchete de cierre por
   <literal>endif;</literal>, <literal>endwhile;</literal>,
